--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">spotnotifier</string>
+    <string name="welcome_message" translatable="true">Bem vindo ao SpotNotifier</string>
+    <string name="user_name" translatable="true">Insira o primeiro nome </string>
+    <string name="user_last_name" translatable="true">Insira o último nome</string>
+    <string name="password" translatable="true">Insira a sua senha</string>
+    <string name="email" translatable="true">Insira o seu Email</string>
+    <string name="register_button">Cadastrar</string>
+    <string name="first_name_label">Primeiro nome</string>
+    <string name="last_name_label">último nome</string>
+    <string name="email_label">Email</string>
+    <string name="password_label">Senha</string>
+    <string name="return_icon">Ícone de retorno</string>
+    <string name="logo">Logo</string>
+    <string name="add_img">Adicionar imagem</string>
+    <string name="user_login_name">Insira seu nome de utilizador</string>
+    <string name="user_name_label_login">Nome do usuário</string>
+    <string name="button_login">Entrar</string>
+    <string name="forgot_password">Esqueceu a sua senha</string>
+    <string name="signIn">Ainda não é usuário? Cadastra-se</string>
 </resources>
