--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">spotnotifier</string>
+    <string name="welcome_message" translatable="true">Bem vindo ao SpotNotifier</string>
+    <string name="user_name" translatable="true">Insira o primeiro nome</string>
+    <string name="user_last_name" translatable="true">Insira o último nome</string>
+    <string name="password" translatable="true">Insira a sua palavra-passe</string>
+    <string name="email" translatable="true">Insira o seu Email</string>
+    <string name="register_button">Registar</string>
+    <string name="first_name_label">Primeiro nome</string>
+    <string name="last_name_label">último nome</string>
+    <string name="email_label">Email</string>
+    <string name="password_label">Palavra-passe</string>
+    <string name="return_icon">Ícone de retorno</string>
+    <string name="logo">Logótipo</string>
+    <string name="add_img">Adicionar imagem</string>
+    <string name="user_login_name">Insira seu nome de utilizador</string>
+    <string name="user_name_label_login">Nome de utilizador</string>
+    <string name="button_login">Entrar</string>
+    <string name="forgot_password">Esqueceu a sua palavra-passe</string>
+    <string name="signIn">Ainda não é utilizador? Regista-se</string>
 </resources>
