--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -11,6 +11,7 @@
     <string name="last_name_label">último nome</string>
     <string name="email_label">Email</string>
     <string name="password_label">Senha</string>
+    <string name="insert_recovery_code">Insira o código</string>
     <string name="new_password">Nova senha</string>
     <string name="retype_password">Repita nova senha</string>
     <string name="return_icon">Ícone de retorno</string>
