--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -25,4 +25,6 @@
     <string name="signIn">Ainda não é usuário? Cadastra-se</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="button_spot_places">Vagas</string>
+    <string name="save_address">Salvar endereço</string>
+    <string name="save_email">Salvar email</string>
 </resources>
