--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -27,4 +27,11 @@
     <string name="button_spot_places">Vagas</string>
     <string name="save_address">Salvar endereço</string>
     <string name="save_email">Salvar email</string>
+    <string name="evaluation_spot">Availação da vaga</string>
+    <string name="found_spot">Encontrou uma vaga disponível?</string>
+    <string name="yes_radio">Sim</string>
+    <string name="no_radio">Não</string>
+    <string name="send_message">Deseja deixar um comentário?</string>
+    <string name="send_message_place_holder">Deixe aqui o seu comentário</string>
+    <string name="save_evaluation">Salvar avaliação da vaga</string>
 </resources>
