--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
     <string name="button_spot_places">Vagas</string>
     <string name="save_address">Guardar morada</string>
     <string name="save_email">Guardar endereço de email</string>
+    <string name="evaluation_spot">Availação da vaga</string>
+    <string name="found_spot">Encontrou uma vaga disponível?</string>
+    <string name="yes_radio">Sim</string>
+    <string name="no_radio">Não</string>
+    <string name="send_message">Deseja deixar um comentário?</string>
+    <string name="send_message_place_holder">Deixe aqui o seu comentário</string>
+    <string name="save_evaluation">Guardar avaliação da vaga</string>
 </resources>
