Implementa documentação dos métodos

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -44,4 +44,5 @@
     <string name="authentication_alert_fail">Authentication fail</string>
     <string name="create_user_fail">create user fail</string>
     <string name="create_user_success">user created</string>
+    <string name="input_hint_maps">Search here</string>
 </resources>
