--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -21,7 +21,7 @@
     <string name="user_login_name">Insira seu nome de usuário</string>
     <string name="user_name_label_login">Nome do usuário</string>
     <string name="button_login">Entrar</string>
-    <string name="recovery_password_button">Salvar senha</string>
+    <string name="recovery_password_button">Por favor verifique a sua caixa de email</string>
     <string name="forgot_password">Esqueceu a sua senha</string>
     <string name="signIn">Ainda não é usuário? Cadastra-se</string>
     <string name="title_activity_maps">MapsActivity</string>
@@ -45,4 +45,8 @@
     <string name="create_user_fail">Falha ao criar usuário</string>
     <string name="create_user_success">Usuário criado com sucesso</string>
     <string name="input_hint_maps">Pesquise aqui</string>
+    <string name="insert_your_code">Por favor, insira o código recebido no email</string>
+    <string name="insert_your_new_password">Por favor, insira a nova senha</string>
+    <string name="new_password_success">Nova senha inserida com sucesso</string>
+    <string name="error_new_password">Erro ao redefinir senha</string>
 </resources>
