--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="user_login_name">Insira seu nome de utilizador</string>
     <string name="user_name_label_login">Nome de utilizador</string>
     <string name="button_login">Entrar</string>
-    <string name="recovery_password_button">Guardar palavra-passe</string>
+    <string name="recovery_password_button">Por favor verifique a sua caixa de email</string>
     <string name="forgot_password">Esqueceu a sua palavra-passe</string>
     <string name="signIn">Ainda não é utilizador? Regista-se</string>
     <string name="title_activity_maps">MapsActivity</string>
@@ -44,4 +44,8 @@
     <string name="create_user_fail">Falha ao criar utilizador</string>
     <string name="create_user_success">Utilizador criado com sucesso</string>
     <string name="input_hint_maps">Pesquise aqui</string>
+    <string name="insert_your_code">Por favor, insira o código recebido no email</string>
+    <string name="insert_your_new_password">Por favor, insira a nova palavra-passe</string>
+    <string name="new_password_success">Nova palavra-passe inserida com sucesso</string>
+    <string name="error_new_password">Erro ao redefinir palavra-passe</string>
 </resources>
