--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,4 +49,5 @@
     <string name="insert_your_new_password">Please insert the new password</string>
     <string name="new_password_success">New password defined with success</string>
     <string name="error_new_password">Error on new password request</string>
+    <string name="create_account_success">Success to create the account</string>
 </resources>
