--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -49,4 +49,5 @@
     <string name="insert_your_new_password">Por favor, insira a nova senha</string>
     <string name="new_password_success">Nova senha inserida com sucesso</string>
     <string name="error_new_password">Erro ao redefinir senha</string>
+    <string name="create_account_success">Conta criada com sucesso</string>
 </resources>
